tests/ui/reborrow/coerce-shared-generics.stderr
error: implementing `CoerceShared` does not allow multiple lifetimes or fields to be coerced
  --> $DIR/coerce-shared-generics.rs:26:38
   |
LL | impl<'a, T, U: Copy, const N: usize> CoerceShared<BufferRef<'a, T, U, N>>
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

